// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expect to render Price component 1`] = `
<styled.div>
  undefined/undefined
</styled.div>
`;

exports[`expect to render Price component 2`] = `
<styled.div>
  NaN
</styled.div>
`;
